fix border overflow

--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -22,6 +22,7 @@
   grid-row: 1/2;
   padding: 1.8rem 2rem 1.8rem 5.4rem;
   border: none;
+  border-radius: 0.5rem;
 
   color: var(--gray);
 
